WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91686
[BlackBerry] Suspend when there's no target buffer until an external compositor is set
https://bugs.webkit.org/show_bug.cgi?id=91686
Summary
[BlackBerry] Suspend when there's no target buffer until an external composit...
Jakob Petsovits
Reported
2012-07-18 15:57:14 PDT
If we don't have a client window (i.e. rendering to GL directly), and a WebPageCompositor is only set after a rendering operation (e.g. a loadData() call that doesn't need to wait for networking), then we'll try to render to BackingStorePrivate::buffer() which doesn't exist at this point. That's bad, and gets us various assertions and possibly worse. Fix it by starting in a screen-suspended state and only resuming screen and backingstore once a compositor is actually set.
Attachments
Patch
(5.82 KB, patch)
2012-07-18 16:01 PDT
,
Jakob Petsovits
no flags
Details
Formatted Diff
Diff
Patch as r+ed above, with more verbose commit message
(6.82 KB, patch)
2012-07-19 14:27 PDT
,
Jakob Petsovits
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jakob Petsovits
Comment 1
2012-07-18 16:01:45 PDT
Created
attachment 153123
[details]
Patch
Jakob Petsovits
Comment 2
2012-07-18 16:03:33 PDT
Depends on the robustified suspend/resume behavior in
bug 91644
, therefore I didn't set a commit-queue request yet.
Jakob Petsovits
Comment 3
2012-07-19 12:30:47 PDT
Comment on
attachment 153123
[details]
Patch
Bug 91644
has been pushed, so this one's good to go if I get a positive review. Setting cq? flag in addition to the r?. Preferred reviewer is George Staikos as this patch is a reimplementation (slightly different, imho slightly better) of an original suggestion of his, but if others feel it's straightforward enough then I might take somebody else's review as well.
Antonio Gomes
Comment 4
2012-07-19 13:51:15 PDT
Comment on
attachment 153123
[details]
Patch I am not in love with this, but discussed with Jakob offline. Jakob, please update the commit message with the details you said on IRC (right timing of things, etc)
Jakob Petsovits
Comment 5
2012-07-19 14:27:25 PDT
Created
attachment 153344
[details]
Patch as r+ed above, with more verbose commit message Antonio, please cq+ if the commit message is more what you were thinking of. Thanks :)
WebKit Review Bot
Comment 6
2012-07-19 21:08:33 PDT
Comment on
attachment 153344
[details]
Patch as r+ed above, with more verbose commit message Clearing flags on attachment: 153344 Committed
r123172
: <
http://trac.webkit.org/changeset/123172
>
WebKit Review Bot
Comment 7
2012-07-19 21:08:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug